Work on standardizing Year 2015 to standard format to get overall time it runs.