@@ -25,7 +25,7 @@ public class IWasToldThereWouldBeNoMath extends AoCDay {
     List<List<Integer>> parseLines(List<String> lines) {
         List<List<Integer>> ints = new ArrayList<>();
         for (String l : lines) {
-            ints.add(Arrays.stream(l.split("x")).map(str -> parseInt(str)).collect(Collectors.toList()));
+            ints.add(Arrays.stream(l.split("x")).map(Integer::parseInt).collect(Collectors.toList()));
         }
         return ints;
     }
@@ -33,13 +33,13 @@ public class IWasToldThereWouldBeNoMath extends AoCDay {
     Integer solutionPart1(List<List<Integer>> ribbons) {
         List<List<Integer>> ribbonAreas = ribbons.stream()
                 .map(dim -> List.of(dim.get(0)*dim.get(1),dim.get(0)*dim.get(2),dim.get(1)*dim.get(2)))
-                .collect(Collectors.toList());
+                .toList();
         List<Integer> extraArea = ribbonAreas.stream()
                 .map(areas -> areas.stream().mapToInt(a -> a).min().getAsInt())
-                .collect(Collectors.toList());
+                .toList();
         List<Integer> totalArea = ribbonAreas.stream()
                 .map(areas -> areas.stream().mapToInt(a -> a).sum())
-                .collect(Collectors.toList());
+                .toList();
         return extraArea.stream().mapToInt(a -> a).sum() + totalArea.stream().mapToInt(a -> 2*a).sum();
     }
 
@@ -47,9 +47,9 @@ public class IWasToldThereWouldBeNoMath extends AoCDay {
         List<Integer> minimumPerimeter = ribbons.stream()
                 .map(dims -> List.of(2*(dims.get(0)+dims.get(1)),2*(dims.get(0)+dims.get(2)),2*(dims.get(1)+dims.get(2))))
                 .map(perimeters -> perimeters.stream().mapToInt(p -> p).min().getAsInt())
-                .collect(Collectors.toList());
+                .toList();
         List<Integer> ribbonVolume = ribbons.stream().map(dims -> dims.get(0)*dims.get(1)*dims.get(2))
-                .collect(Collectors.toList());
+                .toList();
         return minimumPerimeter.stream().mapToInt(p->p).sum() + ribbonVolume.stream().mapToInt(v->v).sum();
     }
 }
